[gd_scene load_steps=2 format=3 uid="uid://b8pif7c645dpl"]

[ext_resource type="Script" uid="uid://g67o4k3dloqw" path="res://scenes/screenEffects/quick_text_effect.gd" id="1_2qwvj"]

[node name="QuickTextEffect" type="CanvasLayer"]
layer = 100
script = ExtResource("1_2qwvj")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextControl" type="Control" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 935.0
offset_top = 300.0
offset_right = -935.0
offset_bottom = -730.0
grow_horizontal = 2
grow_vertical = 2

[node name="QuickTextLabel" type="RichTextLabel" parent="Control/TextControl"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1
